[package]
name = "orkidea"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3  # Optimize for binary size; use "3" for speed
lto = "fat"       # Enable Link-Time Optimization
codegen-units = 1 # Reduce parallel code generation for better optimization
debug = false    # Disable debug information

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.46.1", features = ["full", "net"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
